# cv

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  README.md  astro.config.ts  deno.json  index.html  package.json  tsconfig.json
.github/workflows/: ci.yaml  deploy.yaml  deploy.yml  deployer.yaml
experiments/rich-linebreak/: README.md  linebreak-rich.test.ts  linebreak-rich.ts
scripts/: build.test.ts  build.ts  swap-sections.mjs  update-fonts.ts
src/: App.jsx  chat.ts  config.ts  dither.ts  dither.wasm  dom.ts  fonts.ts  globals.d.ts  linebreak.test.ts  linebreak.ts  logos.ts  main.ts  measure.ts  orbs.ts  panels.ts  render.test.ts  render.ts  styles.css  translations.ts
src/components/: Cv.astro  HeroName.tsx  SectionHeading.astro  SiteHeader.tsx
src/data/: translations.ts
src/layouts/: BaseLayout.astro
src/pages/: index.astro
src/pages/fr/: index.astro
src/pages/zh/: index.astro
src/styles/: global.css
wasm/dither/: Cargo.toml  rustfmt.toml
wasm/dither/src/: lib.rs
